syntax = "proto3";

package protob;

message Void {}

message Pong {
  string value = 1;
}

message Version {
  string version = 1;
  string build = 2;
}

message Name {
  string name = 1;
}

message  Names {
  repeated string names = 1;
}

message Output {
  repeated Result results = 1;
}

message Result {
  string id = 1;
  string name = 2;
  MatchType match_type = 3;
  repeated MatchItem match_data = 4;
}

message MatchItem {
  string canonical_id = 1;
  string canonical = 2;
  int32 edit_distance = 3;
  int32 edit_distance_stem = 4;
}

enum MatchType {
  NONE = 0;
  CANONICAL = 1;
  CANONICAL_FULL = 2;
  FUZZY = 3;
}

service GNMatcher { rpc Ping(Void) returns(Pong) {}
  rpc Ver(Void) returns(Version) {}
  rpc MatchAry(Names) returns(Output) {}
  rpc MatchStream(stream Name) returns(stream Name) {}
}
